B&L QA/objects/Weekly_Call_Plan_Profiles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom setting for KOREA SOLTA.</description>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Format__c</fullName>
        <label>Week Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Weekly Call Plan Profiles</label>
</CustomObject>